Fix content overflow

--- a/src/style/front-end/components/sideNav.scss
+++ b/src/style/front-end/components/sideNav.scss
@@ -11,8 +11,7 @@
   grid-template-columns: 288px auto;
   grid-template-rows: auto auto;
   @include touch{
-    grid-template-columns:1fr;
-    grid-template-rows:auto;
+    display:block;
   }
   .side-nav{
     width:288px;
@@ -32,8 +31,6 @@
       float:none;
       padding-bottom:0;
       // height:100vh;
-      grid-row: auto;
-      grid-column:1/2;
     }
     h2{
       padding:1rem 1.5rem;
@@ -228,8 +225,6 @@
     grid-row: 1/2;
     grid-column:2/3;
     @include touch{
-      grid-row:auto;
-      grid-column:1/2;
       margin-left:0;
       // margin-top:76px;
     }
